<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizerEditActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/number_to_draw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="number of entrants to sample"
            android:inputType="number" />

        <Button
            android:id="@+id/draw_entrants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ChooseFromWaitlist" />

        <Button
            android:id="@+id/back_to_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Back" />

        <ListView
            android:id="@+id/waitlist_sample"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>